# -_-1

./: Dockerfile  README.md  main.c
.github/workflows/: ci.yml
.github/рабочие процессы/: ci.yml
input/: input.c  input.h
output/: output.c  output.h
project/: CMakeLists.txt
project/input/: CMakeLists.txt  input.c  input.h
project/output/: CMakeLists.txt  output.c  output.h
project/tests/: CMakeLists.txt  test_product.cpp
tests/: test_product.cpp
